# lysdr

./: .gitignore  Makefile.am  audio_jack.c  configure.ac  fdms1.c  fdms1.h  filter.c  filter.h  git-version-gen  gui.c  lysdr.c  perseus.c  perseus.h  perseus_audio.c  perseus_audio.h  scale.c  scale.h  sdr.c  sdr.h  smeter.c  waterfall.c  waterfall.h  winrad_palette.h  wscript
eladtest/: elad-fdms1.c  elad-fdms1.h  fdms1_test.c  test-elad-fdms1.c
